[package]
name = "weblite"
version = "0.1.0"
authors = ["smarios <smarios@jaist.ac.jp>"]
edition = "2018"
default-run = "weblite"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde = "1.0"
serde_json = "1.0"
byteorder = "1"
